--- a/gitlab-ci.yml
+++ b/gitlab-ci.yml
@@ -4,6 +4,7 @@ stages:
   - code_quality
   - security
   - build
+  - scan
   - deploy
 
 # ------------------ INSTALL ------------------
@@ -26,87 +27,61 @@ install_frontend:
       - frontend/node_modules/
 
 # ------------------ TEST ------------------
-test_backend:
+run_backend_tests:
   stage: test
   script:
     - cd backend
-    - npm test || echo "No backend tests found"
+    - npm test
 
-test_frontend:
+run_frontend_tests:
   stage: test
   script:
     - cd frontend
-    - npm test || echo "No frontend tests found"
+    - npm test
 
-# ------------------ CODE QUALITY (SonarQube alternative) ------------------
-# Using CodeClimate (free alternative to SonarQube)
-code_quality:
+# ------------------ CODE QUALITY ------------------
+eslint_check:
   stage: code_quality
-  image: docker:latest
-  services:
-    - docker:dind
-  variables:
-    DOCKER_DRIVER: overlay2
   script:
-    - apk add --no-cache curl git
-    - curl -L https://github.com/codeclimate/codeclimate/archive/master.tar.gz | tar xvz
-    - cd codeclimate-master
-    - ./bin/codeclimate analyze || echo "Code Quality check completed"
-  allow_failure: true
-  artifacts:
-    when: always
-    paths:
-      - gl-code-quality-report.json
+    - cd frontend
+    - npx eslint .
 
-# ------------------ SECURITY SCANS ------------------
-# Snyk - Dependency Vulnerability Scan
+# ------------------ SECURITY ------------------
 snyk_scan:
   stage: security
-  image: node:16
   script:
-    - npm install -g snyk
-    - cd backend && snyk test || true
-    - cd ../frontend && snyk test || true
-  allow_failure: true
-
-# OWASP ZAP DAST - Dynamic App Security Testing
-owasp_zap_scan:
-  stage: security
-  image: owasp/zap2docker-stable
-  script:
-    # Here assume your app runs on http://localhost:3000
-    - zap-baseline.py -t http://your-app-url.com -g gen.conf -r zap_report.html || true
-  artifacts:
-    when: always
-    paths:
-      - zap_report.html
-  allow_failure: true
+    - snyk test --all-projects
 
 # ------------------ BUILD ------------------
-build_backend:
+build_images:
   stage: build
   script:
-    - cd backend
-    - npm run build || echo "No backend build step defined"
+    - echo "Building Docker images..."
+    - docker-compose build
   artifacts:
     paths:
-      - backend/dist/
+      - docker_images/
+  tags:
+    - docker
 
-build_frontend:
-  stage: build
+# ------------------ TRIVY SCAN ------------------
+trivy_scan:
+  stage: scan
   script:
-    - cd frontend
-    - npm run build
-  artifacts:
-    paths:
-      - frontend/build/
+    - echo "Scanning Docker images with Trivy..."
+    - trivy image your_image_name:latest
+  needs:
+    - build_images
+  tags:
+    - docker
 
-# ------------------ DEPLOY (example only) ------------------
-deploy:
+# ------------------ DEPLOY ------------------
+deploy_app:
   stage: deploy
   script:
-    - echo "Deploying banking app..."
-    # Example: docker-compose up -d
+    - echo "Deploying application using Docker Compose..."
+    - docker-compose -f docker-compose.yml -p devsecops_flawless up -d --build
   only:
     - main
-
+  tags:
+    - docker
